# setuptools-scm-custom

./: README.md  pyproject.toml
src/setuptools_scm_custom/: __init__.py
